# appendmuch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/appendmuch/: __init__.py  codec.py  drivers.py  storage.py  types.py  utils.py
tests/: test_codec.py  test_driver_pg.py  test_driver_sqlite.py  test_storage.py  test_utils.py
