[project]
name = "appendmuch"
version = "0.0.1"
description = "An extensible append-only log with in-memory cache and pluggable storage backends"
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
{name = "Max R. P. Grossmann", email = "appendmuch@grossmann.nexus"},
{name = "Holger Gerhardt", email = "holger@uproot.science"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sortedcontainers>=2.4.0",
    "msgpack>=1.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
sqlite = []
pg = [
    "psycopg>=3.1.0",
    "psycopg-pool>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy>=1.10",
    "ruff>=0.9",
    "isort>=7.0.0",
    "black>=24.0",
    "bandit>=1.7",
    "sortedcontainers-stubs>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=appendmuch --cov-report=term-missing"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["msgpack", "sortedcontainers", "psycopg_pool"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["appendmuch"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]
"src/appendmuch/drivers.py" = ["S608"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src"]
skip = ["tests", "build", "dist", ".venv", "venv"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B608"]
